third_party/WebKit/Source/WTF/WTF.gyp/WTF.gyp
@@ -66,9 +66,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
           # Turns on #if PLATFORM(CHROMIUM)
           'BUILDING_CHROMIUM__=1',
-          # Controls wtf/FastMalloc
-          # FIXME: consider moving into config.h
-          'USE_SYSTEM_MALLOC=1',
         ],
         'conditions': [
           ['OS=="win"', {
@@ -84,7 +81,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
           }],
           ['OS=="mac"', {
             'defines': [
-              # Use USE_NEW_THEME on Mac.
               'WTF_USE_NEW_THEME=1',
             ],
           }],
@@ -131,7 +127,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
         ['exclude', '(Default|Gtk|Mac|None|Qt|Win|Wx|Efl)\\.(cpp|mm)$'],
         ['exclude', 'wtf/OSRandomSource\\.cpp$'],
         ['exclude', 'wtf/MainThread.cpp$'],
-        ['exclude', 'wtf/TC.*\\.(cpp|h)$'],
       ],
       'direct_dependent_settings': {
         'include_dirs': [
@@ -180,6 +175,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
                 'msvs_disabled_warnings': [4291],
               },
             }],
+          ],
+        }],
+        ['OS!="mac"', {
+          'sources/': [
+            # mac is the only OS that uses WebKit's copy of TCMalloc.
+            ['exclude', 'wtf/TC.*\\.(cpp|h)$'],
           ],
         }],
       ],
